# MergeSort

./: CMakeLists.txt
docs/: Code - Vorgang.txt
src/: main.cpp
src/classes/: DVK.cpp  DVKE.cpp  GEOKO.cpp  HeapSort.cpp  MergeSort.cpp  MyClasses.cpp  SortsTest.cpp  main.h
src/header/: DVK.h  DVKE.h  GEOKO.h  HeapSort.h  MergeSort.h  MyClasses.h  SortsTest.h  main.h
